--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -434,6 +434,7 @@ video {
   width: 100vw;
   height: 100vh;
   padding: 0 var(--navbar-width);
+  overflow: hidden;
 }
 
 .landing__info {
@@ -1152,7 +1153,7 @@ video {
   }
 
   .nosotros__card__title {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 }
 
@@ -1165,7 +1166,7 @@ video {
   height: 100vh;
   width: 100vw;
   padding-left: var(--navbar-width);
-  /* overflow-x: hidden; */
+  margin-bottom: 40px;
 }
 
 .planes__circlebg {
@@ -1237,7 +1238,7 @@ video {
 .planes__card {
   position: relative;
   width: 100%;
-  padding: 20px;
+  padding: 40px 20px 20px 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1330,7 +1331,7 @@ video {
 .planes__card__price {
   display: flex;
   align-items: center;
-  padding: 20px 0;
+  padding: 0 0 20px 0;
   color: #FFF;
 }
 
@@ -1465,7 +1466,6 @@ video {
     grid-template-columns: repeat(2, 45vw);
     justify-content: center;
     gap: 20px;
-    /* height: 140vh; */
   }
 
   .planes__card__info li {
@@ -1510,27 +1510,25 @@ video {
     justify-content: center;
     gap: 30px;
   }
-
 }
 
-@media only screen and (min-width: 75em) and (max-width: 82em) {
+@media only screen and (min-width: 75em) and (max-width: 87.5em) {
   .planes__container {
     padding: 0 20px;
-    grid-template-columns: repeat(4, 21VW);
+    grid-template-columns: repeat(4, 22VW);
     justify-content: center;
-    gap: 20px;
-    height: 70%;
+    gap: 10px;
+  }
+  
+  .planes__card{
+    padding: 0 20px 20px 20px
+  }
+  .planes__card__info {
+    margin-top: 50px;
   }
 }
 
 @media only screen and (min-width: 87.5em) {
-
-  .planes__container {
-    height: 80%;
-    justify-content: center;
-    grid-template-columns: repeat(4, 18VW);
-    gap: 40px;
-  }
 
   .planes__circlebgbf {
     height: 320px;
@@ -1542,11 +1540,14 @@ video {
   }
 
   .planes__card__title {
-    font-size: 2.3rem;
+    font-size: 2rem;
+    letter-spacing: -1px;
   }
 
   .planes__txtw {
     font-size: 1rem;
+    text-align: center;
+    margin-top: 10px;
   }
 
   .planes__card__price>* {
@@ -1561,6 +1562,33 @@ video {
 
   .planes__card__info li {
     font-size: 1rem;
+  }
+
+  .planes__card{
+    padding: 0 20px 20px 20px;
+  }
+
+  .planes__card__header{
+    height: 30%;
+  }
+
+  .planes__container {
+    padding: 0 20px;
+    grid-template-columns: repeat(4, 21W);
+    justify-content: center;
+    gap: 2  0px;
+  }
+
+  .planes__circlebgbf {
+    height: 250px;
+  }
+  
+  .planes__circlebgbf--white {
+    height: 250px;
+  }
+
+  .planes__alert {
+    top: 170px;
   }
 }
 
